# ecology

./: .gitignore  .gitmodules  .travis.yml  LICENCE.md  README.md
ecology-api/: ecology-api.cabal  ecology-api.lock-8.2.2  ecology-api.lock-8.4.4
ecology-api/src/Irreverent/Ecology/: API.hs
ecology-api/src/Irreverent/Ecology/API/: CI.hs  Git.hs  Hooks.hs  IM.hs
ecology-cli/: .mafiaignore  ecology-cli.cabal  ecology-cli.lock-8.0.2  ecology-cli.lock-8.2.2
ecology-cli/etc/: LICENCE.md
ecology-cli/main/: eco.hs
ecology-cli/src/Irreverent/Ecology/Cli/: Main.hs
ecology-core/: ecology-core.cabal  ecology-core.lock-8.2.2
ecology-core/etc/: LICENCE.md
ecology-core/src/Irreverent/Ecology/: Core.hs
ecology-core/src/Irreverent/Ecology/Core/: Data.hs  Searches.hs
ecology-core/src/Irreverent/Ecology/Core/Data/Legacy/Digests/: V1.hs
ecology-core/test/: .ghci  ecology-core-test.cabal  ecology-core-test.lock-8.0.2  mafia  test.hs
ecology-core/test/Test/Irreverent/Ecology/Core/: Data.hs
ecology-core/test/Test/Irreverent/Ecology/Core/Data/Legacy/Digests/: V1.hs
ecology-io/: ecology-io.cabal  ecology-io.lock-8.0.2  ecology-io.lock-8.2.2  ecology-io.lock-8.4.4
ecology-io/src/Irreverent/Ecology/IO/: Common.hs  Data.hs  Report.hs  Sync.hs
ecology-json/: ecology-json.cabal  ecology-json.lock-8.0.2  ecology-json.lock-8.2.2  ecology-json.lock-8.4.4
ecology-json/src/Irreverent/Ecology/: Json.hs
ecology-json/src/Irreverent/Ecology/Json/: Data.hs
ecology-json/test/: test.hs
ecology-json/test/Test/Irreverent/Ecology/Json/: Data.hs
