name:               irreverent-ecology-api
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017-2018 Irreverent Pixel Feats
synopsis:           APIs you have to provide to use with ecology
category:           Data
description:        APIs you have to provide to use with ecology
homepage:           https://github.com/irreverent-pixel-feats/ecology
bug-reports:        https://github.com/irreverent-pixel-feats/ecology/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , irreverent-ecology-core
                      , ultra-either
                      , ultra-io
                      , ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.API
                        Irreverent.Ecology.API.CI
                        Irreverent.Ecology.API.Git
                        Irreverent.Ecology.API.Hooks
                        Irreverent.Ecology.API.IM

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-ecology-api
