name:               ecology-cli
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           CLI for ecology
category:           Data
description:        CLI for ecology
homepage:           https://github.com/irreverent-pixel-feats/ecology
bug-reports:        https://github.com/irreverent-pixel-feats/ecology/issues
cabal-version:      >= 1.18
build-type:         Custom

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , ultra-cli
                      , ultra-either
                      , ultra-optparse
                      , ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src
                        gen

    exposed-modules:    BuildInfo_ecology_cli
                        Irreverent.Ecology.Cli.Main

executable              eco
        default-language:   Haskell2010
        hs-source-dirs:     main
    
        main-is:            eco.hs
    
        ghc-options:        -Wall
    
        build-depends:      base < 5 && >= 4
                        ,   domdere-preamble
                        ,   ecology-cli
    
    
test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   ecology-cli
