name:               ecology-core
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           Core Data types for ecology
category:           Data
description:        Core Data types for ecology
homepage:           https://github.com/domdere/ecology
bug-reports:        https://github.com/domdere/ecology/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/domdere/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , hashable                == 1.2.*
                      , domdere-preamble
                      , ultra-core
                      , ultra-either
                      , ultra-text
                      , ultra-unordered-containers

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.Core
                        Irreverent.Ecology.Core.Data

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   ecology-core
