name:               ecology-io
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           IO operations for ecology
category:           Data
description:        IO operations for ecology
homepage:           https://github.com/irreverent-pixel-feats/ecology
bug-reports:        https://github.com/irreverent-pixel-feats/ecology/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , cryptonite              == 0.25.*
                      , amazonka                == 1.5.*
                      , amazonka-core           == 1.5.*
                      , amazonka-s3             == 1.5.*
                      , amazonka-ssm            == 1.5.*
                      , domdere-preamble
                      , ecology-api
                      , ecology-core
                      , ecology-json
                      , irreverent-persevere
                      , irreverent-quantity-core
                      , irreverent-quantity-th
                      , irreverent-shush
                      , neat-interpolation      == 0.3.*
                      , resourcet               == 1.1.*
                      , time                    >= 1.6 && < 1.9
                      , ultra-aeson
                      , ultra-conduit-legacy
                      , ultra-core
                      , ultra-either
                      , ultra-exceptions
                      , ultra-http-client
                      , ultra-io
                      , ultra-lens
                      , ultra-unordered-containers
                      , ultra-semigroups
                      , ultra-text
                      , validation              == 1.*
                      , wreq                    == 0.5.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.IO.Common
                        Irreverent.Ecology.IO.Data
                        Irreverent.Ecology.IO.Report
                        Irreverent.Ecology.IO.Sync

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   ecology-io
