name:               irreverent-ecology-json
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           JSON serialisation for core Ecology types
category:           Data
description:        JSON serialisation for core Ecology types
homepage:           https://github.com/domdere/ecology
bug-reports:        https://github.com/domdere/ecology/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/domdere/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , ultra-aeson
                      , ultra-either
                      , ultra-text
                      , ultra-unordered-containers
                      , irreverent-ecology-core

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.Json
                        Irreverent.Ecology.Json.Data

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-ecology-core
                    ,   irreverent-ecology-json
                    ,   irreverent-ecology-core-test
                    ,   ultra-aeson
    other-modules:      Test.Irreverent.Ecology.Json.Data
