name:               irreverent-ecology-core-test
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           Generators for Core Data types for ecology
category:           Data
description:        Generators Core Data types for ecology
homepage:           https://github.com/domdere/ecology
bug-reports:        https://github.com/domdere/ecology/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/domdere/ecology.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , ecology-core
                      , lab-core
                      , ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     .

    exposed-modules:    Test.Irreverent.Ecology.Core.Data
